# housler-crypto

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  ECOSYSTEM_REVIEW_2026-01-09.md  SECURITY.md  TEAM_TASKS.md
.github/workflows/: ci.yml  publish-auth.yml  release.yml
docs/: NPM_SETUP.md  PYPI_SETUP.md
python/: .coverage  README.md  pyproject.toml  requirements-dev.txt  setup.py
python/housler_crypto/: __init__.py  core.py  migration.py  utils.py
python/tests/: __init__.py  test_core.py  test_migration.py  test_utils.py
team/: TASKS_2026-01-16.md  TEAM.md  TPM_PROMPT.md
team/prompts/: BE_CRYPTO.md
typescript/: jest.config.js  package-lock.json  package.json  tsconfig.json
typescript/__tests__/: core.test.ts  utils.test.ts
typescript/coverage/: index.html  index.ts.html  lcov.info
typescript/coverage/lcov-report/: index.html  index.ts.html
typescript/src/: index.ts
